[gd_scene load_steps=6 format=3 uid="uid://btemkxm05phja"]

[ext_resource type="Script" uid="uid://cctjydf0tffpn" path="res://shared/ui/portrait_puzzle_card/portrait_puzzle_card.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bq08tsoc6hggr" path="res://shared/assets/placeholder_ui/portrait_empty.png" id="2"]
[ext_resource type="PackedScene" uid="uid://ceiwyipjk4mpt" path="res://shared/ui/phrase_slot/phrase_slot.tscn" id="3"]
[ext_resource type="Script" uid="uid://d13pnhublfonq" path="res://shared/puzzle/puzzle_component/puzzle_component.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://gasn1eljuyqh" path="res://shared/puzzle/puzzle_answer_item/puzzle_answer_item.tscn" id="5"]

[node name="PortraitPuzzleCard" type="ColorRect"]
custom_minimum_size = Vector2(100, 180)
offset_right = 120.0
offset_bottom = 150.0
mouse_filter = 2
color = Color(1, 1, 1, 0)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="Portrait" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2")
expand_mode = 2

[node name="FirstNamePhraseSlot" parent="VBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
visible = false
layout_mode = 2
initial_width = 120.0

[node name="FirstNamePuzzleComponent" type="Node" parent="VBoxContainer/FirstNamePhraseSlot"]
unique_name_in_owner = true
script = ExtResource("4")

[node name="FirstNamePuzzleAnswerItem" parent="VBoxContainer/FirstNamePhraseSlot/FirstNamePuzzleComponent" instance=ExtResource("5")]
unique_name_in_owner = true

[node name="LastNamePhraseSlot" parent="VBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
visible = false
layout_mode = 2
initial_width = 120.0

[node name="LastNamePuzzleComponent" type="Node" parent="VBoxContainer/LastNamePhraseSlot"]
unique_name_in_owner = true
script = ExtResource("4")

[node name="LastNamePuzzleAnswerItem" parent="VBoxContainer/LastNamePhraseSlot/LastNamePuzzleComponent" instance=ExtResource("5")]
unique_name_in_owner = true
